[gd_scene load_steps=2 format=3 uid="uid://bxpbw1uds54j0"]

[ext_resource type="Script" path="res://src/ui/wand_editor/wand_logic_workbench.gd" id="1_script"]

[node name="WandLogicWorkbench" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
split_offset = 200

[node name="LibraryPanel" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/LibraryPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/LibraryPanel/VBoxContainer"]
layout_mode = 2
text = "Materials"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/LibraryPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GridContainer" type="GridContainer" parent="HSplitContainer/LibraryPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
columns = 2

[node name="WorkbenchPanel" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/WorkbenchPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/WorkbenchPanel/VBoxContainer"]
layout_mode = 2
text = "Workbench Sequence"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/WorkbenchPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="HSplitContainer/WorkbenchPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SlotList" type="VBoxContainer" parent="HSplitContainer/WorkbenchPanel/VBoxContainer/ScrollContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="PreviewPanel" type="PanelContainer" parent="HSplitContainer"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PreviewPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PreviewPanel/VBoxContainer"]
layout_mode = 2
text = "Preview"

[node name="SummaryLabel" type="Label" parent="HSplitContainer/PreviewPanel/VBoxContainer"]
layout_mode = 2
text = "..."
autowrap_mode = 2
